--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ol": "^8.2.0",
     "ol-mapbox-style": "^12.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
