--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    # - run: npm ci
+    - run: npm ci
     # - run: npm test
     - run: npm run build
     - uses: actions/upload-pages-artifact@v2
