--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ol-mapbox-style": "^12.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-intersection-observer": "^9.5.3",
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
